--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.2.4",
     "@nestjs/swagger": "^7.1.16",
+    "@nestjs/testing": "^10.2.10",
+    "@types/jest": "^29.5.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "jest": "^29.7.0",
     "mongoose": "^8.0.1",
     "nanoid": "^3.3.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
     "rxjs": "^7.2.0",
+    "ts-jest": "^29.1.1",
     "webpack": "^5.89.0"
   },
   "devDependencies": {
@@ -51,5 +55,19 @@
   "resolutions": {
     "wrap-ansi": "7.0.0",
     "string-width": "4.1.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
